    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
21-Aug-2002

Additions:
    1. JavaScript - Window.confirm is now supported. By default, it always returns true. Users may change this by supplying an
       implementation of DialogResponder to the WebClient.
    2. JavScript - Window.prompt is now supported. By default, it always returns the default value. Users may change this by supplying an
       implementation of DialogResponder to the WebClient.

20-Aug-2002

Problems fixed:
    1. JavaScript - HTML comments prevented JavaScript from working
    2. JavaScript - Errors were reported if Rhino was not present in the classpath
    3. Fixed handling of error statuses when information is still sent on input stream

Additions:
    1. JavaScript - Added Checkbox.value property, along with Checkbox.defaultChecked and Input.name
    2. JavaScript - Added Radio.value, Radio.checked, and Radio.defaultChecked properties
    3. JavaScript - Added Radio.onClick event support

19-Aug-2002

Additions:
    1. WebForm.getButtons() now returns all form buttons, including reset buttons and generic buttons.
    2. JavaScript: The "onClick" event is now supported for generic form buttons
    3. JavaScript: Form.submit() is now working


16-Aug-2002
Acknowledgements:
   Thanks to PeterRoyal for fixing the handling of query-only relative URLs and the IllegalStateException when
       scripting is disable.

Problems fixes:
   1. Relative URLs beginning with "?" were not being handled properly.
   2. Disabling scripting result in IllegalStateException being thrown.

Additions:
   1. JavaScript: The select() method is now defined as a no-op for controls