@@ -1,46 +1,55 @@
 package com.meterware.servletunit;
 /********************************************************************************************************************
-* $Id$
-*
-* Copyright (c) 2000-2001, Russell Gold
-*
-* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
-* documentation files (the "Software"), to deal in the Software without restriction, including without limitation
-* the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
-* to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-*
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions
-* of the Software.
-*
-* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
-* THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
-* CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
-* DEALINGS IN THE SOFTWARE.
-*
-*******************************************************************************************************************/
-import java.io.*;
-import java.net.HttpURLConnection;
-import javax.servlet.ServletException;
-import javax.servlet.http.*;
+ * $Id$
+ *
+ * Copyright (c) 2000-2002, Russell Gold
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+ * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
+ * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
+ * to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all copies or substantial portions
+ * of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
+ * CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+ * DEALINGS IN THE SOFTWARE.
+ *
+ *******************************************************************************************************************/
+import com.meterware.httpunit.GetMethodWebRequest;
+import com.meterware.httpunit.HttpNotFoundException;
+import com.meterware.httpunit.PostMethodWebRequest;
+import com.meterware.httpunit.WebRequest;
+import com.meterware.httpunit.WebResponse;
 
-import junit.framework.Test;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.PrintWriter;
+import java.net.HttpURLConnection;
+
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 
-import com.meterware.httpunit.*;
 
 /**
  * Tests support for stateless HttpServlets.
  **/
 public class StatelessTest extends TestCase {
 
-    public static void main(String args[]) {
+    public static void main( String args[] ) {
         junit.textui.TestRunner.run( suite() );
     }
 
 
-    public static Test suite() {
+    public static TestSuite suite() {
         return new TestSuite( StatelessTest.class );
     }
 
@@ -53,7 +62,7 @@ public class StatelessTest extends TestCase {
     public void testNotFound() throws Exception {
         ServletRunner sr = new ServletRunner();
 
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/nothing" );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/nothing" );
         try {
             sr.getResponse( request );
             fail( "Should have rejected the request" );
@@ -69,7 +78,7 @@ public class StatelessTest extends TestCase {
         ServletRunner sr = new ServletRunner();
         sr.registerServlet( resourceName, AccessCountServlet.class.getName() );
 
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/" + resourceName );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/" + resourceName );
         assertEquals( "First reply", "1", sr.getResponse( request ).getText().trim() );
         assertEquals( "Second reply", "2", sr.getResponse( request ).getText().trim() );
     }
@@ -78,7 +87,7 @@ public class StatelessTest extends TestCase {
     public void testServletAccessByClassName() throws Exception {
         ServletRunner sr = new ServletRunner();
 
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/servlet/" + SimpleGetServlet.class.getName() );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/servlet/" + SimpleGetServlet.class.getName() );
         WebResponse response = sr.getResponse( request );
         assertNotNull( "No response received", response );
         assertEquals( "content type", "text/html", response.getContentType() );
@@ -92,7 +101,7 @@ public class StatelessTest extends TestCase {
         ServletRunner sr = new ServletRunner();
         sr.registerServlet( resourceName, SimpleGetServlet.class.getName() );
 
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/" + resourceName );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/" + resourceName );
         WebResponse response = sr.getResponse( request );
         assertNotNull( "No response received", response );
         assertEquals( "content type", "text/html", response.getContentType() );
@@ -106,12 +115,16 @@ public class StatelessTest extends TestCase {
         ServletRunner sr = new ServletRunner();
         sr.registerServlet( resourceName, ParameterServlet.class.getName() );
 
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/" + resourceName );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/" + resourceName );
         request.setParameter( "color", "red" );
         WebResponse response = sr.getResponse( request );
         assertNotNull( "No response received", response );
         assertEquals( "content type", "text/plain", response.getContentType() );
         assertEquals( "requested resource", "You selected red", response.getText() );
+        String[] headers = response.getHeaderFields( "MyHeader" );
+        assertEquals( "Number of MyHeaders returned", 2, headers.length );
+        assertEquals( "MyHeader #1", "value1", headers[ 0 ] );
+        assertEquals( "MyHeader #2", "value2", headers[ 1 ] );
     }
 
 
@@ -121,12 +134,13 @@ public class StatelessTest extends TestCase {
         ServletRunner sr = new ServletRunner();
         sr.registerServlet( resourceName, ParameterServlet.class.getName() );
 
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/" + resourceName + "?color=dark+red" );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/" + resourceName + "?color=dark+red" );
         WebResponse response = sr.getResponse( request );
         assertNotNull( "No response received", response );
         assertEquals( "content type", "text/plain", response.getContentType() );
         assertEquals( "requested resource", "You selected dark red", response.getText() );
     }
+
 
     public void testHeaderRetrieval() throws Exception {
         ServletRunner sr = new ServletRunner();
@@ -135,12 +149,12 @@ public class StatelessTest extends TestCase {
         ServletUnitClient client = sr.newClient();
         client.setHeaderField( "Sample", "Value" );
         client.setHeaderField( "Request", "Client" );
-        WebRequest request   = new GetMethodWebRequest( "http://localhost/Parameters?color=dark+red" );
+        WebRequest request = new GetMethodWebRequest( "http://localhost/Parameters?color=dark+red" );
         request.setHeaderField( "request", "Caller" );
         InvocationContext ic = client.newInvocation( request );
         assertEquals( "Sample header", "Value", ic.getRequest().getHeader( "sample" ) );
         assertEquals( "Request header", "Caller", ic.getRequest().getHeader( "Request" ) );
-     }
+    }
 
 
     public void testSimplePost() throws Exception {
@@ -149,7 +163,7 @@ public class StatelessTest extends TestCase {
         ServletRunner sr = new ServletRunner();
         sr.registerServlet( resourceName, ParameterServlet.class.getName() );
 
-        WebRequest request   = new PostMethodWebRequest( "http://localhost/" + resourceName );
+        WebRequest request = new PostMethodWebRequest( "http://localhost/" + resourceName );
         request.setParameter( "color", "red" );
         WebResponse response = sr.getResponse( request );
         assertNotNull( "No response received", response );
@@ -172,11 +186,12 @@ public class StatelessTest extends TestCase {
     }
 
 
-
     static class SimpleGetServlet extends HttpServlet {
+
         static String RESPONSE_TEXT = "the desired content\r\n";
 
-        protected void doGet( HttpServletRequest req, HttpServletResponse resp ) throws ServletException,IOException {
+
+        protected void doGet( HttpServletRequest req, HttpServletResponse resp ) throws ServletException, IOException {
             resp.setContentType( "text/html" );
             PrintWriter pw = resp.getWriter();
             pw.print( RESPONSE_TEXT );
@@ -186,9 +201,11 @@ public class StatelessTest extends TestCase {
 
 
     static class AccessCountServlet extends HttpServlet {
+
         private int _numAccesses;
 
-        protected void doGet( HttpServletRequest req, HttpServletResponse resp ) throws ServletException,IOException {
+
+        protected void doGet( HttpServletRequest req, HttpServletResponse resp ) throws ServletException, IOException {
             resp.setContentType( "text/plain" );
             PrintWriter pw = resp.getWriter();
             pw.print( String.valueOf( ++_numAccesses ) );
@@ -198,16 +215,22 @@ public class StatelessTest extends TestCase {
 
 
     static class ParameterServlet extends HttpServlet {
+
         static String RESPONSE_TEXT = "the desired content\r\n";
 
-        protected void doGet( HttpServletRequest req, HttpServletResponse resp ) throws ServletException,IOException {
+
+        protected void doGet( HttpServletRequest req, HttpServletResponse resp ) throws ServletException, IOException {
             resp.setContentType( "text/plain" );
+            resp.addHeader( "MyHeader", "value1" );
+            resp.addHeader( "MyHeader", "value2" );
+
             PrintWriter pw = resp.getWriter();
             pw.print( "You selected " + req.getParameter( "color" ) );
             pw.close();
         }
 
-        protected void doPost( HttpServletRequest req, HttpServletResponse resp ) throws ServletException,IOException {
+
+        protected void doPost( HttpServletRequest req, HttpServletResponse resp ) throws ServletException, IOException {
             resp.setContentType( "text/plain" );
             PrintWriter pw = resp.getWriter();
             pw.print( "You posted " + req.getParameter( "color" ) );
